--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/main.py",
-      "use": "@vercel/python"
+      "src": "*.py",
+      "use": "@liudonghua123/now-flask"
     }
   ],
   "routes": [
